test: add allocation type parameter to project count tests
- Add allocationType parameter to MonthlyAllocationRepository.findDistinctProjectCountByEmployeeIdsAndYearMonth
- Update AllocationServiceTest to pass allocationType parameter in all mocks
- Update AllocationSpecificationTest test data setup
- Update frontend ApiService.getAllocationTypes to pass allocationType parameter

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>